--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
   @apply bg-neutral-900;
+  font-family: "Inter"
 }
